# nvpipe-build

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE.nvpipe  README.md  windows_build.bat
include/: NvPipe.h
lib/windows_cuda_x64/: cuda.lib  cudart.lib  cudart_static.lib
lib/windows_debug_x64/: NvPipe.lib
lib/windows_release_x64/: NvPipe.lib
